--- a/web/WEB-INF/CSS/inventoryCSS.css
+++ b/web/WEB-INF/CSS/inventoryCSS.css
@@ -13,6 +13,7 @@ ul
     padding: 5px; 
     overflow: hidden; 
     background-color:#FE1212;
+    border: 2px solid #0066ff; 
 }
 
 li a:hover 
@@ -86,14 +87,14 @@ li a
 
 .inventoryForm:hover
 {
-    background-color: #c2c2a3;
+    background-color: #e6f2ff;
     width: 50%;
     
 }
 .inventoryForm input[type=text] 
 {
     width: 50%; 
-     
+    padding: 5px; 
     margin: 5px 15px 5px; 
     background: #f1f1f1;
     border: 1px solid #0066ff;
@@ -164,7 +165,7 @@ li a
     padding: 5px; 
     margin: 5px 15px 5px; 
     background: #f1f1f1;
-    border: 1px solid #0066ff; 
+    border: 1px solid #0066ff;
 }
 
 .usersForm input[type=text]:hover
@@ -180,7 +181,7 @@ li a
 }
 .usersForm:hover
 {
-    background-color: #c2c2a3;
+    background-color: #e6f2ff;
     width: 49%;
 }
 
