--- a/web/WEB-INF/CSS/registrationCSS.css
+++ b/web/WEB-INF/CSS/registrationCSS.css
@@ -18,6 +18,7 @@ ul
     padding: 5px; 
     overflow: hidden; 
     background-color:#FE1212;
+    border: 2px solid #0066ff; 
 }
 
 li a:hover 
@@ -60,7 +61,7 @@ form
 
 form:hover
 {
-    background-color: #c2c2a3;
+    background-color: #e6f2ff;
 }
 
 input[type=text], input[type=password] 
